--- a/git/gitconfig.symlink.example
+++ b/git/gitconfig.symlink.example
@@ -7,7 +7,11 @@
 	helper = GIT_CREDENTIAL_HELPER
 [alias]
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
-	unstage = reset --
+	unstage = reset HEAD --
+	co = checkout
+	br = branch
+	ci = commit
+	st = status
 [color]
 	diff = auto
 	status = auto
